syntax = "proto3";

package thumbnails;

option go_package = "./;proto";

service ThumbnailService {
  rpc GetThumbnail(ThumbnailRequest) returns (ThumbnailResponse);
}

message ThumbnailRequest {
  string video_url = 1;
}

message ThumbnailResponse {
  bytes thumbnail_data = 1;
}